--- a/BillableSubscription.Tests/BillableSubscription.Tests.fsproj
+++ b/BillableSubscription.Tests/BillableSubscription.Tests.fsproj
@@ -8,9 +8,17 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
+	<Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+		<Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\testhost.dll.config" />
+		<Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\testhost.x86.dll.config" />
+	</Target>
+
   <ItemGroup>
-    <Compile Include="UnitTest1.fs" />
-    <Compile Include="Program.fs" />
+    <Content Include="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Compile Include="_Integration.fs" />
+    <EmbeddedResource Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +35,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
