--- a/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
+++ b/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="Entities.fs" />
+    <Compile Include="CosmosConfiguration.fs" />
     <Compile Include="CosmosPost.fs" />
     <Compile Include="CosmosQuery.fs" />
     <Compile Include="RedisCache.fs" />
