--- a/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
+++ b/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="RedisConfiguration.fs" />
     <Compile Include="Entities.fs" />
     <Compile Include="CosmosConfiguration.fs" />
     <Compile Include="CosmosPost.fs" />
