--- a/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
+++ b/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
@@ -14,6 +14,8 @@
     <Compile Include="RedisCache.fs" />
     <Compile Include="RedisPost.fs" />
     <Compile Include="RedisQuery.fs" />
+    <Compile Include="SyncPost.fs" />
+    <Compile Include="SyncQuery.fs" />
   </ItemGroup>
 
   <ItemGroup>
