--- a/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
+++ b/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="Entities.fs" />
     <Compile Include="CosmosConfiguration.fs" />
+    <Compile Include="RedisConfiguration.fs" />
     <Compile Include="CosmosPost.fs" />
     <Compile Include="CosmosQuery.fs" />
     <Compile Include="RedisCache.fs" />
