Web API support

--- a/BillableSubscription.TestAPI/BillableSubscription.TestAPI.fsproj
+++ b/BillableSubscription.TestAPI/BillableSubscription.TestAPI.fsproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BillableSubscription\BillableSubscription.fsproj" />
+    <ProjectReference Include="..\BillableSubscription\BillableSubscription.Specification.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
