--- a/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
+++ b/BillableSubscription.DataGateway/BillableSubscription.DataGateway.fsproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BillableSubscription\BillableSubscription.fsproj" />
+    <ProjectReference Include="..\BillableSubscription\BillableSubscription.Specification.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
