--- a/BilliableSubscription.Server/appsettings.json
+++ b/BilliableSubscription.Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+  "redisConnectionString" : "abc",
+  "cosmosConnectionString": "efg"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
