--- a/BilliableSubscription.Server/appsettings.json
+++ b/BilliableSubscription.Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-  "redisConnectionString" : "abc",
-  "cosmosConnectionString": "efg"
+  "redisConnectionString" : "?",
+  "cosmosConnectionString": "?"
   },
   "Logging": {
     "LogLevel": {
