--- a/BilliableSubscription.Server/appsettings.json
+++ b/BilliableSubscription.Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-  "redisConnectionString" : "?",
-  "cosmosConnectionString": "?"
+  "redis-connection-string" : "?",
+  "cosmos-connection-string": "?"
   },
   "Logging": {
     "LogLevel": {
